Add Carousel App and Feature Card App fycons.

--- a/fycons.html
+++ b/fycons.html
@@ -3,7 +3,7 @@
   <head>
     <title>Livefyre Bootstrap Developer Docs</title>
     <!-- <link href="../../dist/all.css" rel="stylesheet"> -->
-    <link rel="stylesheet" href="http://livefyre-cdn.s3.amazonaws.com/libs/livefyre-bootstrap/v1.4.11/livefyre-bootstrap.min.css">
+    <link rel="stylesheet" href="http://livefyre-cdn.s3.amazonaws.com/libs/livefyre-bootstrap/v1.4.12/livefyre-bootstrap.min.css">
     <link rel="stylesheet" href="css/docs.css">
     <link rel="stylesheet" href="css/fycon.css">
   </head>
@@ -413,6 +413,10 @@
           <input type="text" readonly="readonly" value="home">
         </li>
         <li>
+          <span class="fycon-icon-carousel" aria-hidden="true"></span>
+          <input type="text" readonly="readonly" value="icon-carousel">
+        </li>
+        <li>
           <span class="fycon-icon-chat" aria-hidden="true"></span>
           <input type="text" readonly="readonly" value="icon-chat">
         </li>
@@ -431,6 +435,10 @@
         <li>
           <span class="fycon-icon-custom-app" aria-hidden="true"></span>
           <input type="text" readonly="readonly" value="icon-custom-app">
+        </li>
+        <li>
+          <span class="fycon-icon-feature-card" aria-hidden="true"></span>
+          <input type="text" readonly="readonly" value="icon-feature-card">
         </li>
         <li>
           <span class="fycon-icon-feed" aria-hidden="true"></span>
@@ -521,6 +529,10 @@
           <input type="text" readonly="readonly" value="logo-chat">
         </li>
         <li>
+          <span class="fycon-logo-carousel" aria-hidden="true"></span>
+          <input type="text" readonly="readonly" value="logo-carousel">
+        </li>
+        <li>
           <span class="fycon-logo-columns" aria-hidden="true"></span>
           <input type="text" readonly="readonly" value="logo-columns">
         </li>
@@ -539,6 +551,10 @@
         <li>
           <span class="fycon-logo-developers" aria-hidden="true"></span>
           <input type="text" readonly="readonly" value="logo-developers">
+        </li>
+        <li>
+          <span class="fycon-logo-feature-card" aria-hidden="true"></span>
+          <input type="text" readonly="readonly" value="logo-feature-card">
         </li>
         <li>
           <span class="fycon-logo-feed" aria-hidden="true"></span>
