Update migration checklist with tabs.

--- a/v2.html
+++ b/v2.html
@@ -139,6 +139,7 @@ https://cdn.rawgit.com/Livefyre/livefyre-bootstrap/2.0.0/dist/livefyre-bootstrap
                       <li><strong>Colors:</strong> All grey values have changed. Make sure your text is still readable, backgrounds aren't too dark/light, etc. (<a href="#section-colors">more</a>)</li>
                       <li><strong>Tooltips:</strong> If you'd like the change a tooltip to trigger on click, use the <code>data-trigger="click"</code> attribute. (<a href="#section-tooltips">example markup</a>)</li>
                       <li><strong>Popovers:</strong> The Light theme (i.e. the original theme) is now the default. No need to use the <code>.light</code> class anymore. The Dark theme is still available using the combination of <code>.popover .dark</code>.</li>
+                      <li><strong>Tabs:</strong> Check tab navigation as <a href="#section-tabs">their styles have been updated</a>.</li>
                     </ol>
                   </div>
                 </div>
