--- a/demos/kitchensink/bootswatch.html
+++ b/demos/kitchensink/bootswatch.html
@@ -112,6 +112,56 @@
       -->
 
 
+      <!-- LF: Add Plus
+      ================================================== -->
+      <div class="bs-docs-section clearfix">
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="page-header">
+              <h1 id="navbar">Add Plus to Fycon</h1>
+            </div>
+          </div>
+        </div>
+
+        <div class="bs-component">
+          <p>
+            <span class="fycon-icon-wall fycon-sm add-plus"></span> Media Wall
+          </p>
+          <p>
+            <span class="fycon-icon-wall add-plus"></span> Media Wall
+          </p>
+          <p>
+            <span class="fycon-folder fycon-lg add-plus"></span> Add Folder
+          </p>
+          <p>
+            <a class=""><span class="fycon-photograph fycon-xl add-plus"></span></a>
+          </p>
+          <p>
+            <a class=""><span class="fycon-photograph fycon-xl add-plus" style="font-size: 24px;"></span></a>
+          </p>
+          <p>
+            <button class="btn btn-default btn-lg"><span class="fycon-source-twitter fycon-xl add-plus"></span> Twitter</button>
+            <button class="btn btn-default btn-lg"><span class="fycon-source-instagram fycon-lg add-plus"></span> Instagram</button>
+            <button class="btn btn-default btn-lg"><span class="fycon-folder fycon-xl add-plus"></span> New Folder</button>
+            <button class="btn btn-default btn-lg"><span class="fycon-folder fycon-xl add-plus"></span> Upload Files</button>
+          </p>
+          <p>
+            <button class="btn btn-default"><span class="fycon-source-twitter fycon-xl add-plus"></span> Twitter</button>
+            <button class="btn btn-default"><span class="fycon-source-instagram fycon-lg add-plus"></span> Instagram</button>
+            <button class="btn btn-default"><span class="fycon-folder fycon-xl add-plus"></span> New Folder</button>
+            <button class="btn btn-default"><span class="fycon-folder fycon-xl add-plus"></span> Upload Files</button>
+          </p>
+          <p>
+            <button class="btn btn-default btn-sm"><span class="fycon-source-twitter fycon-xl add-plus"></span> Twitter</button>
+            <button class="btn btn-default btn-sm"><span class="fycon-source-instagram fycon-lg add-plus"></span> Instagram</button>
+            <button class="btn btn-default btn-sm"><span class="fycon-folder fycon-xl add-plus"></span> New Folder</button>
+            <button class="btn btn-default btn-sm"><span class="fycon-folder fycon-xl add-plus"></span> Upload Files</button>
+          </p>
+        </div>
+
+      </div>
+
+
 
       <!-- LF: No Data
       ================================================== -->
