Add links to external resources.

--- a/v2.html
+++ b/v2.html
@@ -125,7 +125,7 @@ https://cdn.rawgit.com/Livefyre/livefyre-bootstrap/2.0.0/dist/livefyre-bootstrap
                     <ol>
                       <li>Update your Livefyre Bootstrap files to 2.0.0. You may need to also update your version of [Twitter] Bootstrap to 3.3.4.</li>
                       <li>Remove the <code>lf-</code> prefix from your CSS classes, markup and JS.</li>
-                      <li><strong>Importing:</strong> In a variable named <code>@bootstrap-less</code>, specify the location of your [Twitter] Bootstrap files. Include this variable at the top of your main Less file or wherever you import Livefyre-Bootstrap's variables and mixins files. (<a href="#section-importing">examples</a>)</li>
+                      <li><strong>Importing:</strong> In a variable named <code>@bootstrap-less</code>, specify the location of your [Twitter] Bootstrap files. Include this variable at the top of your main Less file or wherever you import Livefyre Bootstrap's variables and mixins files. (<a href="#section-importing">examples</a>)</li>
                       <li><strong>Buttons:</strong> In your CSS, if you've added any custom vertical padding values to a button, you may need to remove or adjust them since buttons now use line-height instead of padding to determine height.</li>
                       <li><strong>Button Toolbars:</strong> Spacing between buttons and buttons groups has increased. You may need to adjust any subsequent layout breakage.</li>
                       <li><strong>Toggles:</strong> Update all toggle instances with the new markup. (<a href="#section-toggles">example markup</a>)</li>
@@ -695,7 +695,7 @@ https://cdn.rawgit.com/Livefyre/livefyre-bootstrap/2.0.0/dist/livefyre-bootstrap
             <h3>Basic List Group</h3>
             <ul class="descrip">
               <li>Minor skin update. Most notably, we removed the border that surrounded the entire list because we usually don't need it.</li>
-              <li>The same classes from Bootstrap's list group apply including <code>.active</code> and <code>.disabled</code>.</li>
+              <li>The same classes from <a href="http://getbootstrap.com/components/#list-group" target="_blank">Bootstrap's list group</a> apply including <code>.active</code> and <code>.disabled</code>.</li>
             </ul>
             <div class="bs-example">
               <ul class="list-group">
@@ -799,7 +799,7 @@ https://cdn.rawgit.com/Livefyre/livefyre-bootstrap/2.0.0/dist/livefyre-bootstrap
 
           <section id="section-avatars">
             <h1 class="section-header">Avatars</h1>
-            <p class="descrip">Common Livefyre and other social media avatars come in sizes in multiples of 12. Livefyre-bootstrap ships with 24x24, 36x36, 48x48, and 96x96.</p>
+            <p class="descrip">Common Livefyre and other social media avatars come in sizes in multiples of 12. Livefyre Bootstrap ships with 24x24, 36x36, 48x48, and 96x96.</p>
             <div class="bs-example">
               <div class="avatar avatar-lg" style="display: inline-block;">
                 <img src="http://placehold.it/96x96">
@@ -1493,7 +1493,7 @@ loader.decorate($('#lfLoader-mini'), 'mini')</code></pre>
           <section id="section-tabs">
             <h1 class="section-header">Tabs</h1>
             <p class="descrip">
-              This is just a skin update. The same markup and classes from Bootstrap's tabs apply.
+              This is just a skin update. The same markup and classes from <a href="http://getbootstrap.com/javascript/#tabs" target="_blank">Bootstrap's tabs</a> apply.
             </p>
             <div class="bs-example">
               <ul class="nav nav-tabs">
