--- a/demos/kitchensink/bootswatch.html
+++ b/demos/kitchensink/bootswatch.html
@@ -112,6 +112,79 @@
       -->
 
 
+      <!-- LF: Search Form
+      ================================================== -->
+      <div class="bs-docs-section clearfix">
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="page-header">
+              <h1 id="navbar">Search Form</h1>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-6">
+
+            <div class="bs-component">
+              <h5>Default</h5>
+              <div class="query-input">
+                <div class="form-group">
+                  <div class="input-group">
+                    <input type="text" placeholder="Find stream" value="" class="form-control">
+                  </div>
+                </div>
+              </div>
+            </div><!-- /bs-component -->
+
+            <div class="bs-component">
+              <h5>Loader</h5>
+              <div class="query-input">
+                <div class="form-group">
+                  <div class="input-group">
+                    <input type="text" placeholder="Find stream" value="" class="form-control">
+                  </div>
+                </div>
+                <div class="loader loader-mini"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
+              </div>
+            </div><!-- /bs-component -->
+
+            <div class="bs-component">
+              <h5>With Button (add class .query-input-with-button)</h5>
+              <div class="query-input query-input-with-button">
+                <div class="form-group">
+                  <div class="input-group">
+                    <input type="text" placeholder="Find stream" value="" class="form-control">
+                    <span class="input-group-btn">
+                      <button type="submit" class="btn btn-default">
+                        <span class="fycon-search fycon-lg"></span>
+                      </button>
+                    </span>
+                  </div>
+                </div>
+                <div class="loader loader-mini"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
+              </div>
+            </div><!-- /bs-component -->
+
+            <div class="bs-component" style="padding: 20px 40px; background-color: #2f3440;">
+              <h5>Dark Background (no special classes)</h5>
+              <div class="query-input">
+                <div class="form-group">
+                  <div class="input-group">
+                    <input type="text" placeholder="Find stream" value="" class="form-control">
+                  </div>
+                </div>
+              </div>
+            </div><!-- /bs-component -->
+
+          </div>
+        </div>
+
+      </div>
+
+
+
+
       <!-- LF: Add Plus
       ================================================== -->
       <div class="bs-docs-section clearfix">
