--- a/demos/kitchensink/bootswatch.html
+++ b/demos/kitchensink/bootswatch.html
@@ -130,7 +130,9 @@
               <h5>Default</h5>
               <div class="query-input">
                 <div class="form-group">
-                  <input type="text" placeholder="Find stream" value="" class="form-control">
+                  <div class="input-group">
+                    <input type="text" placeholder="Find stream" class="form-control">
+                  </div>
                 </div>
               </div>
             </div><!-- /bs-component -->
@@ -139,9 +141,17 @@
               <h5>Loader</h5>
               <div class="query-input">
                 <div class="form-group">
-                  <input type="text" placeholder="Find stream" value="" class="form-control">
+                  <div class="input-group">
+                    <input type="text" placeholder="Find stream" class="form-control">
+                    <span class="input-group-addon">
+                      <div class="loader loader-mini">
+                        <div></div><div></div><div></div>
+                        <div></div><div></div><div></div>
+                        <div></div><div></div><div></div>
+                      </div>
+                    </span>
+                  </div>
                 </div>
-                <div class="loader loader-mini"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
               </div>
             </div><!-- /bs-component -->
 
@@ -150,7 +160,14 @@
               <div class="query-input query-input-with-button">
                 <div class="form-group">
                   <div class="input-group">
-                    <input type="text" placeholder="Find stream" value="" class="form-control">
+                    <input type="text" placeholder="Find stream" class="form-control">
+                    <span class="input-group-addon">
+                      <div class="loader loader-mini">
+                        <div></div><div></div><div></div>
+                        <div></div><div></div><div></div>
+                        <div></div><div></div><div></div>
+                      </div>
+                    </span>
                     <span class="input-group-btn">
                       <button type="submit" class="btn btn-default">
                         <span class="fycon-search fycon-lg"></span>
@@ -158,7 +175,6 @@
                     </span>
                   </div>
                 </div>
-                <div class="loader loader-mini"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
               </div>
             </div><!-- /bs-component -->
 
@@ -166,7 +182,7 @@
               <h5>Dark Background (no special classes)</h5>
               <div class="query-input">
                 <div class="form-group">
-                  <input type="text" placeholder="Find stream" value="" class="form-control">
+                  <input type="text" placeholder="Find stream" class="form-control">
                 </div>
               </div>
             </div><!-- /bs-component -->
