Fix toggles demo.

--- a/demos/kitchensink/bootswatch.html
+++ b/demos/kitchensink/bootswatch.html
@@ -432,7 +432,7 @@
                   <span data-off="Off">On</span>
               </label>
               
-              <label class="toggle toggled-sm">
+              <label class="toggle toggle-sm">
                   <input type="checkbox" role="checkbox" />
                   <span></span>
               </label>
