Add query input to 'changes' section

--- a/v2.html
+++ b/v2.html
@@ -105,6 +105,7 @@ https://cdn.rawgit.com/Livefyre/livefyre-bootstrap/2.0.0/dist/livefyre-bootstrap
                       <li>Allows you to specify the location of your [Twitter] Bootstrap files.</li>
                       <li>New Slats styles.</li>
                       <li>New Alert Modal.</li>
+                      <li>New Query Input (i.e. Search Form) styles.</li>
                       <li>Loader: Fixes bug where a one-pixel line sometimes appears between the second and third rows.</li>
                       <li>Many more listed alongside each section below.</li>
                     </ul>
