--- a/demos/kitchensink/bootswatch.html
+++ b/demos/kitchensink/bootswatch.html
@@ -1643,8 +1643,12 @@
         <div class="row">
           <div class="col-lg-6">
             <h2>Modals</h2>
+            <button class="btn btn-lg btn-default" data-toggle="modal" data-target="#lfModal">
+              Launch Modal
+            </button>
+
             <div class="bs-component">
-              <div class="modal">
+              <div id="lfModal" class="modal fade">
                 <div class="modal-dialog">
                   <div class="modal-content">
                     <div class="modal-header">
