Modals: Fix animation for example.

--- a/components.html
+++ b/components.html
@@ -529,7 +529,7 @@ loader.decorate($('#lfLoader-mini'), 'mini')</code></pre>
     </div><!-- /.container -->
     
     <div class="lf-modal fade" id="lfModal" style="margin: 0 auto;">
-      <div class="lf-modal-dialog lf-modal-lg">
+      <div class="lf-modal-dialog lf-modal-lg lf-animated">
         <div class="lf-modal-content">
           <div class="lf-modal-header">
             <button class="lf-close" data-dismiss="modal">
