--- a/v2.html
+++ b/v2.html
@@ -60,8 +60,8 @@
                 <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
                   <div class="panel-body">
                     <ul>
-                      <li>This version of Livefyre Bootstrap was updated to support the creation of Asset Manager. Version 1.x still exists separately and will be maintained until the rest of Studio and our apps migrate to 2.0.0.</li>
-                      <li>Version 2.0.0 currently lives on the <a href="https://github.com/Livefyre/livefyre-bootstrap/tree/2.0.0" target="_blank"><code>2.0.0</code> branch on Github</a>. The 1.x version lives on the <code>master</code> branch.</li>
+                      <li>This version of Livefyre Bootstrap was updated to support the creation of Asset Manager. Version 1.x still exists separately and will be maintained until the rest of Studio and our apps migrate to 2.x.</li>
+                      <li>Version 2.x currently lives on the <a href="https://github.com/Livefyre/livefyre-bootstrap/tree/2.x" target="_blank"><code>2.x</code> branch on Github</a>. The 1.x version still lives on the <code>master</code> branch for now.</li>
                       <li>All of the content from the <a href="components.html">UI Components</a> page has been included here for your convenience.</li>
                       <li><a href="fycons.html">Fycons</a> and their classes are pretty much identical to v1.x (minus the lf- prefix).</li>
                     </ul>
@@ -82,8 +82,8 @@
                     <p>In your <code>package.json</code> or <code>bower.json</code> file, add or update the <code>livefyre-bootstrap</code> dependency:
                     <pre>"livefyre-bootstrap": "git+ssh://git@github.com/Livefyre/livefyre-bootstrap.git#2.0.0"</pre>
                     <p>For JSFiddle and CodePen projects, you can use RawGit to serve the CSS and JS files:</p>
-                    <pre>https://cdn.rawgit.com/Livefyre/livefyre-bootstrap/2.0.0/dist/livefyre-bootstrap.min.css
-https://cdn.rawgit.com/Livefyre/livefyre-bootstrap/2.0.0/dist/livefyre-bootstrap.min.js</pre>
+                    <pre>https://cdn.livefyre.com/libs/livefyre-bootstrap/v2.0.0/livefyre-bootstrap.min.css
+https://cdn.livefyre.com/libs/livefyre-bootstrap/v2.0.0/livefyre-bootstrap.min.js</pre>
                   </div>
                 </div>
               </div>
