Change references to 2.0.0 to 2.x.

--- a/components.html
+++ b/components.html
@@ -18,7 +18,7 @@
             <a href="fycons.html">Fycons</a>
           </li>
           <li>
-            <a href="v2.html">Version 2.0.0!</a>
+            <a href="v2.html">Version 2.x!</a>
           </li>
         </ul>
         <ul class="docs-nav right">
