--- a/v2.html
+++ b/v2.html
@@ -2,13 +2,7 @@
 <html class="lf">
   <head>
     <title>Livefyre Bootstrap Developer Docs</title>
-
-    <!--
-    TODO: Once 2.0.0 is firmed-up and we start making releases, update documentation and its "Usage" section URLs so that they use tags/releases instead of the branch in the URL. This is because Rawgit's CDN caches files permanently:
-    https://rawgit.com/faq#cdn-ttl
-    -->
-    <link rel="stylesheet" href="https://rawgit.com/Livefyre/livefyre-bootstrap/2.0.0/dist/livefyre-bootstrap.min.css">
-
+    <link rel="stylesheet" href="https://cdn.livefyre.com/libs/livefyre-bootstrap/v2.0.0/livefyre-bootstrap.min.css">
     <link rel="stylesheet" href="css/docs.css">
   </head>
   <body>
@@ -23,7 +17,7 @@
             <a href="fycons.html">Fycons</a>
           </li>
           <li>
-            <a href="v2.html">Version 2.0.0!</a>
+            <a href="v2.html">Version 2.x!</a>
           </li>
         </ul>
         <ul class="docs-nav right">
@@ -36,7 +30,7 @@
 
     <section class="hero">
       <div class="container">
-        <h1>Version 2.0.0!</h1>
+        <h1>Version 2.x!</h1>
         <p>All the funs. None of the prefixes.</p>
       </div>
     </section>
@@ -124,7 +118,7 @@ https://cdn.livefyre.com/libs/livefyre-bootstrap/v2.0.0/livefyre-bootstrap.min.j
                 <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
                   <div class="panel-body">
                     <ol>
-                      <li>Update your Livefyre Bootstrap files to 2.0.0. You may need to also update your version of [Twitter] Bootstrap to 3.3.4.</li>
+                      <li>Update your Livefyre Bootstrap files to 2.x. You may need to also update your version of [Twitter] Bootstrap to 3.3.4.</li>
                       <li>Remove the <code>lf-</code> prefix from your CSS classes, markup and JS.</li>
                       <li><strong>Importing:</strong> In a variable named <code>@bootstrap-less</code>, specify the location of your [Twitter] Bootstrap files. Include this variable at the top of your main Less file or wherever you import Livefyre Bootstrap's variables and mixins files. (<a href="#section-importing">examples</a>)</li>
                       <li><strong>Buttons:</strong> In your CSS, if you've added any custom vertical padding values to a button, you may need to remove or adjust them since buttons now use line-height instead of padding to determine height.</li>
@@ -1706,7 +1700,7 @@ loader.decorate($('#lfLoader-mini'), 'mini')</code></pre>
     -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.4/js/bootstrap.min.js"></script>
-    <script src="https://rawgit.com/Livefyre/livefyre-bootstrap/2.0.0/dist/livefyre-bootstrap.min.js"></script>    
+    <script src="https://cdn.livefyre.com/libs/livefyre-bootstrap/v2.0.0/livefyre-bootstrap.min.js"></script>    
  
     <script type="text/javascript">
       $('[data-toggle="tooltip"]').tooltip();
