Add Yahoo and AOL fycons.

--- a/fycons.html
+++ b/fycons.html
@@ -4,7 +4,7 @@
     <title>Livefyre Bootstrap Developer Docs</title>
     <!-- <link href="../../dist/all.css" rel="stylesheet"> -->
     <!-- Use 1.x for the button example and 2.x for the add-plus example. -->
-    <link rel="stylesheet" href="http://livefyre-cdn.s3.amazonaws.com/libs/livefyre-bootstrap/v1.4.13/livefyre-bootstrap.min.css">
+    <link rel="stylesheet" href="http://livefyre-cdn.s3.amazonaws.com/libs/livefyre-bootstrap/v1.4.14/livefyre-bootstrap.min.css">
     <link rel="stylesheet" href="https://rawgit.com/Livefyre/livefyre-bootstrap/2.0.0/dist/livefyre-bootstrap.min.css">
 
     <link rel="stylesheet" href="css/docs.css">
@@ -737,6 +737,10 @@
           <input type="text" readonly="readonly" value="settings-switch">
         </li>
         <li>
+          <span class="fycon-source-aol" aria-hidden="true"></span>
+          <input type="text" readonly="readonly" value="source-aol">
+        </li>
+        <li>
           <span class="fycon-source-drupal" aria-hidden="true"></span>
           <input type="text" readonly="readonly" value="source-drupal">
         </li>
@@ -823,6 +827,10 @@
         <li>
           <span class="fycon-source-wordpress" aria-hidden="true"></span>
           <input type="text" readonly="readonly" value="source-wordpress">
+        </li>
+        <li>
+          <span class="fycon-source-yahoo" aria-hidden="true"></span>
+          <input type="text" readonly="readonly" value="source-yahoo">
         </li>
         <li>
           <span class="fycon-source-youtube1" aria-hidden="true"></span>
