Add Twitter fycons.

--- a/fycons.html
+++ b/fycons.html
@@ -4,7 +4,7 @@
     <title>Livefyre Bootstrap Developer Docs</title>
     <!-- <link href="../../dist/all.css" rel="stylesheet"> -->
     <!-- Use 1.x for the button example and 2.x for the add-plus example. -->
-    <link rel="stylesheet" href="https://livefyre-cdn.s3.amazonaws.com/libs/livefyre-bootstrap/v1.4.14/livefyre-bootstrap.min.css">
+    <link rel="stylesheet" href="https://livefyre-cdn.s3.amazonaws.com/libs/livefyre-bootstrap/v1.4.15/livefyre-bootstrap.min.css">
     <link rel="stylesheet" href="https://rawgit.com/Livefyre/livefyre-bootstrap/2.0.0/dist/livefyre-bootstrap.min.css">
 
     <link rel="stylesheet" href="css/docs.css">
@@ -871,6 +871,18 @@
         <li>
           <span class="fycon-tv-sd" aria-hidden="true"></span>
           <input type="text" readonly="readonly" value="tv-sd">
+        </li>
+        <li>
+          <span class="fycon-twitter-like" aria-hidden="true"></span>
+          <input type="text" readonly="readonly" value="twitter-like">
+        </li>
+        <li>
+          <span class="fycon-twitter-reply" aria-hidden="true"></span>
+          <input type="text" readonly="readonly" value="twitter-reply">
+        </li>
+        <li>
+          <span class="fycon-twitter-retweet" aria-hidden="true"></span>
+          <input type="text" readonly="readonly" value="twitter-retweet">
         </li>
         <li>
           <span class="fycon-undo" aria-hidden="true"></span>
