Add new pin, nav-higlights, ordered-list and unordered-list fycons.

--- a/fycons.html
+++ b/fycons.html
@@ -4,7 +4,7 @@
     <title>Livefyre Bootstrap Developer Docs</title>
     <!-- <link href="../../dist/all.css" rel="stylesheet"> -->
     <!-- Use 1.x for the button example and 2.x for the add-plus example. -->
-    <link rel="stylesheet" href="https://livefyre-cdn.s3.amazonaws.com/libs/livefyre-bootstrap/v1.4.15/livefyre-bootstrap.min.css">
+    <link rel="stylesheet" href="https://livefyre-cdn.s3.amazonaws.com/libs/livefyre-bootstrap/v1.4.16/livefyre-bootstrap.min.css">
     <link rel="stylesheet" href="https://rawgit.com/Livefyre/livefyre-bootstrap/2.0.0/dist/livefyre-bootstrap.min.css">
 
     <link rel="stylesheet" href="css/docs.css">
@@ -665,6 +665,10 @@
           <input type="text" readonly="readonly" value="nav-expand">
         </li>
         <li>
+          <span class="fycon-nav-highlights" aria-hidden="true"></span>
+          <input type="text" readonly="readonly" value="nav-highlights">
+        </li>
+        <li>
           <span class="fycon-network" aria-hidden="true"></span>
           <input type="text" readonly="readonly" value="network">
         </li>
@@ -675,6 +679,10 @@
         <li>
           <span class="fycon-photograph" aria-hidden="true"></span>
           <input type="text" readonly="readonly" value="photograph">
+        </li>
+        <li>
+          <span class="fycon-pin" aria-hidden="true"></span>
+          <input type="text" readonly="readonly" value="pin">
         </li>
         <li>
           <span class="fycon-plane" aria-hidden="true"></span>
